k8s/minio-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: minio-fs-pvc
      containers:
        - name: minio
          image: minio/minio
          args:
            - server
            - /data
          volumeMounts:
            - name: data 
              mountPath: "/data"
          ports:
            - containerPort: 9000
              hostPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: minio-cip-srv
spec:
  type: ClusterIP
  selector:
    app: minio
  ports:
    - name: minio
      protocol: TCP
      port: 9000
      targetPort: 9000
